# aether

./: .clang-tidy  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench.cpp  compare.cpp
cmake/: aetherConfig.cmake.in
include/aether/: aether.hpp  bitpack.hpp  bitserialize.hpp  channel.hpp  clocksync.hpp  config.hpp  congestion.hpp  connection.hpp  crypto.hpp  delta.hpp  fragment.hpp  interest.hpp  interpolation.hpp  net.hpp  packet.hpp  peer.hpp  priority.hpp  random.hpp  reflect.hpp  reliability.hpp  rendezvous.hpp  replication.hpp  security.hpp  serialize.hpp  simulator.hpp  socket.hpp  stats.hpp  testnet.hpp  types.hpp  util.hpp  varint.hpp  wire.hpp  x25519.hpp
src/: socket.cpp  socket_posix.cpp  socket_win.cpp
test/: channel_test.cpp  clocksync_test.cpp  congestion_test.cpp  crypto_window_test.cpp  fuzz_test.cpp  interest_test.cpp  odr_tu_a.cpp  odr_tu_b.cpp  property_test.cpp  reliability_test.cpp  replication_test.cpp  roundtrip.cpp  security_test.cpp  serialize_dyn_test.cpp  umbrella.cpp  varint_test.cpp  wire_test.cpp
test/package/: CMakeLists.txt  main.cpp
